# jeedom-daemon-py

./: .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: create-release.yml  pipeline.yml  pylint.yml  pytest-3.11.yml  pytest-3.9.yml  python-publish.yml  release.yml  semantic-release.yml
jeedom-daemon-py/: aio_connector.py
jeedomdaemon/: __init__.py  aio_connector.py  base_config.py  base_daemon.py  utils.py  version.py
tests/: aio_connector_test.py  base_config_test.py  base_daemon_test.py
